# Scheduling-Simulator

./: Makefile  config.json  pyproject.toml  staticProcesses.json
src/: clock.py  global_clock.py  main.py  scheduler.py  simulation.py
src/algorithms/: algorithm.py  algorithm_factory.py  earliest_deadline.py  fcfs.py  multilevel_queue.py  priority.py  rate_monotonic.py  round_robin.py  shortest_job.py
src/config/: config.py
src/config/types/: clock.py  process_generation.py  scheduling.py
src/processes/: process.py  process_generation.py
src/ui/config/: config_window.py
src/ui/config/elements/: clock_panel.py  pg_panel.py  scheduling_panel.py
src/ui/custom/: process_block.py
src/ui/graphs/: avgMetricsGraph.py  boxMetricsGraph.py  completedOverTimeGraph.py  waitingOverTimeGraph.py
src/ui/simulation/: simulation_window.py
src/ui/simulation/elements/: clock_panel.py  completed_panel.py  config_panel.py  process_panel.py
