[project]
name = "scheduling simulator"
version = "0.1.0"
description = "Application that simulates the process of scheduling of a processor"
authors = [
    {name = "Tomas-Simoes",email = "tomas20simoes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.9.0,<7.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
